working on a lot of things  :/

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -20,5 +20,7 @@
   "minValue": "Minmum value",
   "displayedMaxValue": "Displayed maximum value",
   "displayedMinValue": "Displayed minimum value",
-  "displayedSteps": "Displayed steps"
+  "displayedSteps": "Displayed steps",
+  "newHardwareOutputTitle": "New hardware output",
+  "add": "add"
 }
