add formRules tests add mocking suppport for i18n/index add i18n translations

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -22,5 +22,8 @@
   "displayedMinValue": "Displayed minimum value",
   "displayedSteps": "Displayed steps",
   "newHardwareOutputTitle": "New hardware output",
-  "add": "add"
+  "add": "add",
+  "greaterZero": "value hast to be greater zero",
+  "smallerEqualOne": "value hast to be smaller or equal one",
+  "greaterEqualZero": "value hast to be equal or greater zero"
 }
