--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -26,5 +26,7 @@
   "greaterZero": "Value hast to be greater zero",
   "smallerEqualOne": "Value hast to be smaller or equal one",
   "smallerOne": "Value hast to be smaller one",
-  "greaterEqualZero": "Value hast to be equal or greater zero"
+  "greaterEqualZero": "Value has to be equal or greater zero",
+  "greaterMinValue": "Value has to be greater minimum value",
+  "smallerMaxValue": "Value has to be smaller maximum value"
 }
